# medevalkit

./: .gitignore  Dockerfile  LICENSE  PLAN.md  README.md  pyproject.toml
data/: medqa_50.jsonl
src/medevalkit/: __init__.py  aggregate.py  cli.py  dataset.py  llm.py  report.py  schemas.py  storage.py  trace.py
src/medevalkit/agents/: __init__.py  judge.py  responder.py
src/medevalkit/templates/: report.html.j2
tests/: __init__.py  test_aggregate.py  test_llm_parse_repair.py  test_schemas.py  test_storage.py
